# juce_template

./: .gitignore  CMakeLists.txt  README.md
src/: editor.hpp  headers.hpp  plugin.cpp  plugin.hpp  scoped_timer.hpp
src/juce/: editor.cpp  editor.hpp  plugin.cpp  plugin.hpp  unity_build.cpp
